# xi-term

./: Cargo.toml
src/: main.rs
src/core/: cmd.rs  terminal.rs  tui.rs
src/widgets/: command_prompt.rs  editor.rs
src/widgets/view/: client.rs  view.rs
