[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "xi-pager"
version = "0.1.0"

[dependencies]
clap = "2.31.1"
failure = "0.1.1"
futures = "0.1.18"
log = "0.4.1"
log4rs = "0.8.0"
termion = {git="https://gitlab.redox-os.org/redox-os/termion"}
tokio = "0.1.7"
xdg = "2.1.0"
indexmap = "1.0.1"
# xrl = "0.0.5"
xrl = { git = "https://github.com/xi-frontend/xrl" }
tempfile = "3.1.0"
nix = "0.14.1"
